# treasure-furnace

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pocket_manifest_builder.py  pyproject.toml  setup.py  treasure_forge.py
.github/workflows/: validate.yml
adapters/: __init__.py  agent_executor.py  agent_registry.py  agent_runtime.py
core/: __init__.py  import_manager.py  treasure_v2_schema.py
templates/basic-treasure/: README.md  SKILL.md  pack.yaml
templates/basic-treasure/examples/: smoke.md
templates/knowledge-treasure/: README.md  SKILL.md  pack.yaml
templates/knowledge-treasure/examples/: smoke.md
templates/marshal-treasure/: README.md  SKILL.md  pack.yaml
templates/marshal-treasure/examples/: smoke.md
tests/: conftest.py  test_import_manager.py  test_treasure_forge_alias_maps.py  test_treasure_forge_preview_core.py  test_treasure_forge_tool_mappings.py  test_treasure_forge_url_helpers.py
